istio/istio-raw/gateway_virtualServices/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  namespace: default-a
  labels:
    app: service-a
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
      - name: service-a
        image: poxstone/flask_any_response
        ports:
        - containerPort: 8080
        - containerPort: 50051

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  namespace: default-a
  labels:
    app: service-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - name: service-b
        image: poxstone/flask_any_response
        ports:
        - containerPort: 8080
        - containerPort: 50051


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c
  namespace: default-a
  labels:
    app: service-c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-c
  template:
    metadata:
      labels:
        app: service-c
    spec:
      containers:
      - name: service-c
        image: poxstone/flask_any_response
        ports:
        - containerPort: 8080
        - containerPort: 50051
