istio/istio-raw/gateway_virtualServices/virtualservice-a.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service-a-virtualservice
  namespace: default
spec:
  hosts:
  - '*'
  gateways:
  - flask-gateway
  http:
  #- match:
  #  - uri:
  #      prefix: /kiali
  #  rewrite:
  #    uri: /kiali
  #  route:
  #  - destination:
  #      host: kiali
  #      port:
  #        number: 20001
  #- match:
  #  - uri:
  #      prefix: /grafana
  #  rewrite:
  #    uri: /grafana
  #  route:
  #  - destination:
  #      host: grafana
  #      port:
  #        number: 3000
  - name: service-a-virtualservice
    timeout: 15s 
    route:
    - destination:
        host: service-a
        port:
          number: 80
      weight: 80
    - destination:
        host: service-b
        port:
          number: 80
      weight: 15
    - destination:
        host: service-c
        port:
          number: 80
      weight: 5
